libs/config/tests/errors/ce5_unexpected_array/stdout.ansi
[31m[CE5] Error:[0m property was not expected to be an array
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:9[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;155ma[0m[38;5;155mr[0m[38;5;155mr[0m[38;5;155ma[0m[38;5;155my[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201m{[0m[38;5;201m1[0m[38;5;201m,[0m[38;5;201m2[0m[38;5;201m,[0m[38;5;201m3[0m[38;5;201m}[0m[38;5;249m;[0m
 [38;5;240m  │[0m [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m   [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m   [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m expected `[38;5;155marray[][0m` here
 [38;5;240m  │[0m            [38;5;201m│[0m     
 [38;5;240m  │[0m            [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m unexpected array
[38;5;246m───╯[0m
